<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editText"
                android:text="@string/colHours"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="111dp"
                android:layout_height="40dp"
                android:autofillHints="@string/colHint"
                android:ems="10"
                android:inputType="number"
                tools:text="" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:text="@string/RadioButton"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/RadioButton2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/RadioButton3" />
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>